# xiuh

./: LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/backlog/: 20250426-basic-erp-models.md
docs/source/history/0.1/: 0.1.0.rst  _changes-0.1.0.rst
src/xiuh/: __init__.py
