[project]
name = "xiuh"
version = "0.1.0"
description = "Generic ERP models and tools"
readme = "README.md"
authors = [
    { name = "Medardo Antonio Rodriguez" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
xiuh = "xiuh:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
]
lint = [
    "isort>=6.0.1",
    "ruff>=0.11.7",
]
test = [
    "hypothesis>=6.131.9",
    "pytest>=8.3.5",
]
tooling = [
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "notebook>=7.4.1",
]
dev = [
    { include-group="test" },
    { include-group="lint" },
    { include-group="docs" },
    { include-group="tooling" },
]

[tool.uv]
default-groups = ["dev"]
